css/template.css
@CHARSET "ISO-8859-1";

@font-face {
	font-family: 'normal';
	src: url("../fonts/eurof55.ttf") format("truetype");
}

sub {
	vertical-align: sub;
	font-size: smaller;
}

body {
	width:auto;
	min-width:800px;
	background-color: black;
	font-family: 'normal', Century Gothic, sans-serif;
	font-size:medium;
	color:white;
	overflow:auto;
}

header {
	height:50px;
	width:100%;
    text-align:right;
}

div.main {
	width:100%;
	margin:0 auto;
	text-align:center;
}

aside {
	display:inline-block;
	vertical-align:top;
}
	
a {
	text-decoration:none;
	color:inherit;
}

h3 {
	border-bottom:1px solid white;
	text-transform:uppercase;
}
	

div.appName {
	padding:10px;
	vertical-align:middle;
	float:left;
	font-size:30px;
}

.icon {
	height:30px;
	width:30px;
	margin:8px;
	display:inline-block;
	vertical-align:middle;
	text-align:center;
	-webkit-border-radius:16px;
	-moz-border-radius:16px;
	border-radius:16px;
	border:2px solid white;
	-webkit-transition: all .5s;
	-moz-transition: all .5s;
}

form.icon {
	border:none;
}

a.icon:hover {
	background-color: DeepSkyBlue;
}

div.fileManagerBand a.icon:hover {
	background-color: black;
}

aside.left {
	width:280px;
	margin-right:10px;
	text-align:right;
}

aside.right {
	width:60%;
	min-width:500px;
	text-align:left;
}

div.fileManagerBand {
	background-color:DeepSkyBlue;
	height:50px;
	width:100%;
}

p.address {
	height:50px;
	line-height:50px;
	padding-left:20px;
	border-left:solid 1px white;
	background-image:url("../img/spinner.png");
    background-repeat:no-repeat;
    background-position:bottom left;
}

section {
    background-color:#333333;
    margin-top:10px;
	text-align:center;
}

section.export {
	height:50px;
	line-height:50px;
}

section.player {
	min-height:100px;
	line-height:100px;
}

section.spectrum {
	height:200px;
	line-height:200px;
}

section.platine {
	height:150px;
	line-height:150px;
}

div.filterType, div.filterNoise {
	padding:10px;
	margin-bottom:5px;
	text-align:center;
}

div.filterNoise, span.choiceLeft {
	text-align:right;
}

span.choiceRight {
	text-align:left;
}

h3.filterTitle {
	text-align:right;
}

div.singleFilter, div.doubleFilter {
	padding:10px 0px;
	width:100%;
	border-top:1px solid #666;
}

span.choiceLeft, span.choiceRight, span.switchTwin, span.checkBox {
	width:35%;
	vertical-align:middle;
	display:inline-block;
}

span.switchTwin, span.checkBox {
	width:40px;
}

span.checkBox {
	margin-right:5px;
}

div.frequencyRange {
	width:100%;
	text-align:left;
	vertical-align:middle;
	display:inline-block;
	margin-bottom:10px;
}

span.smallerToRight {
	font-size:small;
	float:right;
	vertical-align:middle;
	display:inline-block;
}

div.output {
	width:40px;
	text-align:right;
	vertical-align:middle;
	display:inline-block;
}

